fixed flashing images on mobile portfolio

--- a/wp-content/themes/clayTercek/static/scss/_works.scss
+++ b/wp-content/themes/clayTercek/static/scss/_works.scss
@@ -139,6 +139,10 @@ main.portfolio {
 				background-size: 50% 20%;
 				background-position: 0 70%;
 			}
+
+			.imgWrapper img {
+				display: none;
+			}
 		}
 
 		article.hover {
